# Dodo-Lang

./: .gitignore  BaseTypes.dodo  CMakeLists.txt  README.md  Syntax.md  dodotest.dod  dodotest.dodo  increment.sh
Dodo-lang/: Dodo-lang.sln
Dodo-lang/Dodo-lang/: CheckLexer.txt  Dodo-lang.vcxproj  Dodo-lang.vcxproj.filters  FirstProgram.txt  LexicalAnalysis.hpp  LexicalToken.cpp  LexicalToken.hpp  lexicalToken.h  lexical_analysis.cpp  lexical_analysis.h  lexical_token.cpp  lexical_token.h  main.cpp
Dodo-lang/Dodo-lang/CodeGenerator/: GenerateCode.cpp  GenerateCode.hpp  StackVariable.cpp  StackVector.hpp
Dodo-lang/Dodo-lang/Parser/: Generator.tpp  MapWrapper.tpp  Parser.cpp  Parser.hpp  ParserVariables.cpp  ParserVariables.hpp
Dodo-lang/Dodo-lang/Parser/CreateTree/: CreateTree.cpp
Dodo-lang/Dodo-lang/Parser/ParserDocumentation/: introduction.md  objects.md  types.md
Dodo-lang/Dodo-lang/Parser/ParserStages/: ObjectDeclarationParser.cpp  ObjectDeclarationParser.hpp  ObjectParser.hpp  TypeParser.cpp  TypeParser.hpp
Dodo-lang/Dodo-lang/Parser/SyntaxAnalysis/: AnalysisInternal.hpp  AnalysisRunner.cpp  CreateFunction.cpp  CreateInstruction.cpp  CreateType.cpp  MathParser.cpp  SyntaxAnalysis.hpp
Dodo-lang/Dodo-lang/parser/: generator.tpp  parser.cpp  parser.hpp
Dodo-lang/Dodo-lang/parser/parser documentation/: introduction.md  types.md
Dodo-lang/Stdlib/: Essentials.dod  Essentials.dodo  Print.dodo  String.dodo  Time.dodo
Dodo-lang/Stdlib/AlwaysImported/: Print.dodo  _BaseImports.dodo  _PrimitiveTypes.dodo
Dodo-lang/Stdlib/Essentials/: BasicTypes.dod  BasicTypes.dodo
Dodo-lang/documentation/: FunctionCalls.md  FunctionDefinitions.md  Index.md  MathematicalExpressions.md  MemoryBehaviour.md  SystemCalls.md  TypeDefinitions.md  ValueConversions.md
Dodo-lang/examples/: Tank.dodo
Dodo-lang/src/: Flags.hpp  LexicalAnalysis.hpp  LexicalToken.cpp  LexicalToken.hpp  Options.hpp  lexical_analysis.cpp  main.cpp
Dodo-lang/src/Cli/: Cli.cpp  Cli.hpp
Dodo-lang/src/CodeGenerator/: Bytecode.cpp  Bytecode.hpp  FunctionCall.cpp  FunctionStepOne.cpp  GenerateCode.cpp  GenerateCode.hpp  GenerateCodeInternal.hpp  MemoryStructure.cpp  MemoryStructure.hpp  StackVariable.cpp  StackVector.cpp  StackVector.hpp  ValueConverters.cpp  ValueType.cpp  ValueType.hpp
Dodo-lang/src/CodeGenerator/Assembly/: Assembly.cpp  Assembly.hpp  FunctionCallStuff.cpp  FunctionStepTwo.cpp  LinearAnalysis.cpp  LinearAnalysis.hpp  MemoryStructure.cpp  MemoryStructure.hpp  TheGenerator.cpp  TheGenerator.hpp  TheGeneratorConstructors.cpp
Dodo-lang/src/CodeGenerator/Assembly/Generation/: InstructionPlanner.cpp
Dodo-lang/src/CodeGenerator/Assembly/InstructionPlanning/: InstructionPlanner.cpp  InstructionPlanningInternal.hpp
Dodo-lang/src/CodeGenerator/Assembly/X86_64/: X86_64.cpp  X86_64.hpp  X86_64Assembly.cpp  X86_64Assembly.hpp  X86_64Config.cpp  X86_64Config.hpp  X86_64Convert.cpp  X86_64Convert.hpp  X86_64Enums.hpp  X86_64Printing.cpp
Dodo-lang/src/CodeGenerator/Bytecode/: Bytecode.cpp  Bytecode.hpp  BytecodeInternal.hpp  BytecodeOperators.cpp  BytecodeOptimizations.cpp  BytecodePrinting.cpp  FunctionStepOne.cpp
Dodo-lang/src/CodeGenerator/Lifetimes/: Lifetime.cpp  Lifetime.hpp
Dodo-lang/src/CodeGenerator/Memory/: Memory.cpp  Memory.hpp
Dodo-lang/src/CodeGeneratorOld/: FunctionCall.cpp  GenerateCode.cpp  GenerateCode.hpp  GeneratorSettings.hpp  StackVector.cpp  StackVector.hpp  ValueConverters.cpp
Dodo-lang/src/Lexer/: Lexing.cpp  Lexing.hpp  LexingEnums.hpp  LexingImplementations.cpp  LexingInternal.hpp
Dodo-lang/src/Misc/: ErrorHandling.cpp  ErrorHandling.hpp  Increment.hpp  Options.hpp
Dodo-lang/src/Parser/: CheckFunctions.cpp  Generator.tpp  MapWrapper.tpp  Parser.cpp  Parser.hpp  ParserVariables.cpp  ParserVariables.hpp  TypeObject.cpp  TypeObject.hpp
Dodo-lang/src/Parser/CreateTree/: CreateTree.hpp
Dodo-lang/src/Parser/SyntaxAnalysis/: AnalysisInternal.hpp  AnalysisRunner.cpp  CreateFunction.cpp  CreateFunctionOrMethod.cpp  CreateInstruction.cpp  CreateType.cpp  CreateVariable.cpp  MathParser.cpp  SyntaxAnalysis.hpp
